--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
+    "test:headed": "playwright test --headed",
+    "test:coverage": "playwright test --reporter=html",
     "example": "ts-node examples/basic-usage.ts",
     "example-advanced": "ts-node examples/advanced-usage.ts",
     "prepublishOnly": "npm run build",
@@ -56,23 +59,22 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.53.1",
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.0",
-    "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "audit-ci": "^6.6.1",
+    "depcheck": "^1.4.3",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-node": "^11.1.0",
-    "prettier": "^3.0.0",
+    "eslint-plugin-security": "^1.7.1",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
-    "depcheck": "^1.4.3",
     "npm-check-updates": "^16.10.0",
-    "audit-ci": "^6.6.1"
+    "prettier": "^3.0.0",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "chalk": "^4.1.2"
@@ -94,4 +96,4 @@
       "git add"
     ]
   }
-} 
+}
