--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,12 @@
     "noUnusedParameters": true
   },
   "include": [
-    "src/**/*.ts",
-    "examples/**/*.ts",
-    "tests/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "examples",
+    "tests"
   ]
 } 
